# k-pilot

./: .env.example  .gitignore  README.md  pyproject.toml  test.similar.py
src/k_pilot/: __init__.py  __main__.py  config.py
src/k_pilot/adapters/driven/atspi/: _models.py
src/k_pilot/adapters/driven/kwin/: __init__.py  kwin_adapter.py  kwin_errors.py  kwin_executor.py  kwin_types.py
src/k_pilot/adapters/driven/mpris/: __init__.py  mpris_media_adapter.py  mpris_media_errors.py  mpris_media_player_identifier.py  mpris_media_proxy.py
src/k_pilot/adapters/driven/notifications/: __init__.py  freedesktop_notification_adapter.py  freedesktop_notification_errors.py  freedesktop_notification_types.py
src/k_pilot/adapters/driving/agent_tools/: media.py  notification.py  window.py
src/k_pilot/adapters/driving/api/: ws_server.py
src/k_pilot/adapters/driving/wake_word_detection/: wwd_adapter.py  wwd_audio_engine.py  wwd_db.py
src/k_pilot/application/: agent.py  deps.py
src/k_pilot/application/tools/: media.py  notification.py  window.py
src/k_pilot/bootstrap/: __init__.py  container.py
src/k_pilot/bootstrap/skills/: __init__.py  media_skill.py  notification_skill.py  window_skill.py
src/k_pilot/core/application/: app_deps.py  conversation_manager.py  skill_protocol.py
src/k_pilot/core/application/ports/driven/: __init__.py
src/k_pilot/core/application/services/: gemini_live.py  wake_word.py  ws_server.py
src/k_pilot/core/domain/: __init__.py
src/k_pilot/core/domain/common/: enums.py  value_objects.py
src/k_pilot/core/domain/media/: models.py
src/k_pilot/core/domain/notification/: models.py
src/k_pilot/core/domain/window/: models.py
src/k_pilot/core/ports/: __init__.py
src/k_pilot/core/ports/driven/: __init__.py  media_control.py  notification.py  window_manager.py
src/k_pilot/core/shared/: __init__.py  logging.py  observability.py  paths.py
src/k_pilot/domain/: models.py  ports.py  wayland.py
src/k_pilot/infrastructure/: dbus_connection.py  logging.py  observability.py
src/k_pilot/infrastructure/adapters/: kwin_windows.py  mpris_media.py  notifications.py  wake_word.py
src/k_pilot/infrastructure/agents/: gemini_live.py
src/k_pilot/infrastructure/server/: ws_server.py
src/k_pilot/prompts/: __init__.py
test/: kwin.py
