[project]
name = "k-pilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Undead34", email = "maizogabriel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dasbus>=1.7",
    "google-genai>=1.68.0",
    "local-wake>=0.1.2",
    "noisereduce>=3.0.3",
    "numpy>=2.4.3",
    "pyaudio>=0.2.14",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.71.0",
    "pydbus>=0.6.0",
    "pyee>=13.0.1",
    "pygobject>=3.56.2",
    "python-dotenv>=1.2.2",
    "structlog>=25.5.0",
    "websockets>=16.0",
]

[project.scripts]
k-pilot = "k_pilot:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[tool.basedpyright]
typeCheckingMode = "standard"

# Ignorar que faltan stubs para librerías de sistema
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportAny = false
