[project]
name = "k-pilot"
version = "0.1.0"
description = "K-Pilot: KDE Plasma 6 Control Agent"
readme = "README.md"
authors = [
    { name = "Undead34", email = "maizogabriel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "better-exceptions>=0.3.3",
    "dasbus>=1.7",
    "google-genai>=1.68.0",
    "local-wake>=0.1.2",
    "noisereduce>=3.0.3",
    "numpy>=2.4.3",
    "pyaudio>=0.2.14",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.71.0",
    "pyee>=13.0.1",
    "pygobject>=3.56.2",
    "structlog>=25.5.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.28.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
]

[project.scripts]
k-pilot = "k_pilot.__main__:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

# ==========================================
# RUFF
# ==========================================
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ==========================================
# BASEDPYRIGHT
# ==========================================
[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
include = ["src"]
exclude = ["**/assets/**", "**/__pycache__"]

reportMissingImports = "error"
reportMissingTypeStubs = "none"
reportReturnType = "error"
reportCallIssue = "error"
reportAny = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownParameterType = "warning"

# ==========================================
# PYTEST
# ==========================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
